# enterprise-agent-employee

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  QUALITY.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci-schedule.yml  ci.yml  deploy-highway-demo-pages.yml
apps/admin-portal/: README.md
apps/config_center/: __init__.py  main.py  models.py  push.py  store.py
apps/connector_hub/: __init__.py  client.py  config.py  errors.py  main.py  models.py  registry.py
apps/core-platform/: README.md  server.py
apps/gateway/: main.py
apps/governance/: main.py  tenant.py
apps/highway-rescue-demo/: README.md  server.py
apps/knowledge_hub/: __init__.py  client.py  config.py  errors.py  main.py  models.py  vector_store.py
apps/model_hub/: __init__.py  client.py  config.py  errors.py  main.py  models.py  router.py  usage.py
apps/mvp-core/: README.md  server.py
apps/ops/: __init__.py  _seed_data.py  clear_data.py  db.py  key_manager.py  main.py  models.py  openclaw_registry.py  tools_registry.py
apps/ops_center/: __init__.py  config.py  engine.py  main.py  models.py
apps/runtime/: main.py  (+6 more)
common/: __init__.py  config.py  errors.py  models.py  tracing.py
docs/: enterprise-agent-employee-system-design.md  frontend-framework-requirements.md  highway-inspection-gotham-design.md  layered-delivery-roadmap.md  mvp-scope-piagent-portal.md  openclaw-piagent-adoption.md
frontend/: eslint.config.js  package-lock.json  package.json
scripts/: dev.sh
specs/: runtime-spec.md
tests/: __init__.py
(+144 files in other folders)
